add: versão 1.0 da fase 1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ site_description: Documentação do projeto do grupo IRMA-MARY-KELLER de Qualida
 
 nav:
   - Home: index.md
-  - Fase 1 - Propósito de avaliação: fase_1/fase_1.md
+  - Fase 1: fase_1/fase_1.md
 
 theme:
   name: material
