--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ nav:
   - Fase 1: fase_1/fase_1.md
   - Fase 2 - Especificação da Avaliação:
     - Abordagem GQM: "fase_2/GQM.md"
-    - Medição 1 - Compatibilidade: "fase_2/confiabilidade.md"
+    - Medição 1 - Compatibilidade: "fase_2/compatibilidade.md"
     - Medição 2 - Portabilidade: "fase_2/portabilidade.md"
     - Níveis de Pontuação e critérios de julgamento: "fase_2/niveis_pontuacao_criterios_julgamento.md"
     - Conclusão: "fase_2/conclusao.md"
