--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,8 @@ nav:
     - Testes de Portabilidade: "fase_3/portabilidade.md"
     - Cronograma de ações: "fase_3/cronograma.md"
     - Ferramentas e Ambiente: "fase_3/ferramentas.md"
+  - Fase 4 - Execução da Avaliação:
+    - Portabilidade: "fase_4/portabilidade.md"
 
 theme:
   name: material
