feat: atualizacao dos testes, organização dos resultados e resultado dos CT-POR-04  e CT-POR-05

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - Cronograma de ações: "fase_3/cronograma.md"
     - Ferramentas e Ambiente: "fase_3/ferramentas.md"
   - Fase 4 - Execução da Avaliação:
+    - Compatibilidade: "fase_4/compatibilidade.md"
     - Portabilidade: "fase_4/portabilidade.md"
 
 theme:
