--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,8 +19,8 @@ nav:
     - Cronograma de ações: "fase_3/cronograma.md"
     - Ferramentas e Ambiente: "fase_3/ferramentas.md"
   - Fase 4 - Execução da Avaliação:
-    - Compatibilidade: "fase_4/compatibilidade.md"
-    - Portabilidade: "fase_4/portabilidade.md"
+    - Execução da Compatibilidade: "fase_4/compatibilidade.md"
+    - Execução da Portabilidade: "fase_4/portabilidade.md"
   - Declaração de uso de IA: declaracao_ia.md
   - Tabelas de contribuição: contribuicoes.md
 
